Put logo within navbar-collapse div to toggle in and out with resizing fix for issue #142

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,7 @@
 
 .navbar-toggler {
     transition: all 0.4s;
+    margin-left:auto;
 }
 
 .navbar-toggler:focus {
